--- a/1.html
+++ b/1.html
@@ -3,30 +3,9 @@
 <Head>
     <title>DOUDOUGH</title>
     <meta charset="utf-8">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
-
-<!-- <h6 style="font-family: 'Noto Sans KR'; font-weight: 400;">홍생수 | 중등시리즈 1</h6> -->
-<!-- <img src ="1920x600_01.jpg" width ="100%"> -->
-<style>
-    body {
-        background-image: url('1920x600_01.jpg'); /* 배경 이미지 경로 */
-        background-size: auto 600px; /* 이미지가 전체 페이지를 커버하도록 조절 */
-        background-position: top; /* 이미지 중심이 페이지 중심과 일치하도록 조절 */
-        background-repeat: no-repeat; /* 이미지 반복 없음 */
-    }
-    /* 화면의 가로 크기가 1920px 이상일 때 적용할 스타일 */
-    @media (min-width: 1920px) {
-            body {
-                background-size: 100% auto; /* 가로 크기를 100%로 조절하여 전체 화면에 맞춤 */
-            }
-        }
-</style>
 </Head>
 <body>
-    <a href="1.html"><img src="doudough.svg" width="100px"></a>
-    <h6>홍생수 | 중등시리즈 1</h6>
-    <a href="2.html"><h1>정수와 유리수</h1></a>
+    <a href="index.html"><img src="doudough.svg" width="100px"></a>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, ea error consequatur aliquid, ipsa eaque magni reiciendis eligendi, quas veritatis a corrupti laboriosam odit recusandae veniam saepe eius. Necessitatibus, quae.
 </body>
 </html>
