--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>DOUDOUGH</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
@@ -47,8 +48,7 @@
                 <div id="bottom_images">
                     <input type="image" class="bottom_images" src="image/1정수와유리수.jpg">
                     <input type="image" class="bottom_images" src="image/2일차방정식.jpg">
-                    <input type="image" class="bottom_images" src="image/1정수와유리수.jpg">
-                    <input type="image" class="bottom_images" src="image/1정수와유리수.jpg">
+
                     
                 </div>
             </div>
